tests/baselines/reference/importCallExpressionGrammarError.errors.txt
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(5,8): error TS1325: Specifier of dynamic import cannot be spread element.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(5,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(7,17): error TS1325: Specifier of dynamic import cannot be spread element.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(7,20): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(8,12): error TS1324: Dynamic import must have one specifier as an argument.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(9,19): error TS1135: Argument expression expected.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(9,19): error TS7036: Dynamic import's specifier must be of type 'string', but here has type '未定'.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(10,12): error TS1324: Dynamic import must have one specifier as an argument.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(10,19): error TS2307: Cannot find module 'pathToModule'.


==== tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts (9 errors) ====
    declare function getSpecifier(): string;
    declare var whatToLoad: boolean;
    
    var a = ["./0"];
    import(...["PathModule"]);
           ~~~~~~~~~~~~~~~~~
!!! error TS1325: Specifier of dynamic import cannot be spread element.
              ~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    var p1 = import(...a);
                    ~~~~
!!! error TS1325: Specifier of dynamic import cannot be spread element.
                       ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    const p2 = import();
               ~~~~~~~~
!!! error TS1324: Dynamic import must have one specifier as an argument.
    const p3 = import(,);
                      
!!! error TS1135: Argument expression expected.
                      
!!! error TS7036: Dynamic import's specifier must be of type 'string', but here has type '未定'.
    const p4 = import("pathToModule", "secondModule");
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1324: Dynamic import must have one specifier as an argument.
                      ~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'pathToModule'.